--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "我干了什么 究竟拿了时间换了什么"
+description: "任何事情不应该觉得没有希望就不去做,而是认真努力去做了才有希望"
 ---
 
 {% for post in paginator.posts %}
