--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "任何事情不应该觉得没有希望就不去做,而是认真努力去做了才有希望"
+description: "人生有梦 各自精彩"
 ---
 
 {% for post in paginator.posts %}
