--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: keep hungry keep foolish
+description: It is because of everyone who ever taught me,that i am today
 header-img: "img/tag-bg.jpg"
 ---
 
